# B2B-Agentic-Workflow-Simulator

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  mkdocs.yml  pyproject.toml
docs/: advanced_sensitivity.md  ai_adoption.md  api_reference.md  architecture.md  budget_modeling.md  calibration_workflow.md  capacity_modeling.md  capacity_planning.md  cli_reference.md  compliance.md  concepts.md  config_schema.md  consultant_outputs.md  contributing.md  discrete_event_engine.md  examples_gallery.md  getting_started.md  index.md  industry_case_studies.md  json_workflows.md  limitations.md  monte_carlo.md  org_growth_projection.md  org_health_score.md  organization_model.md  policy_engine.md  portfolio_analysis.md  quickstart.md  recommendation_engine.md  redesign_analysis.md  release_notes.md  restructuring_simulation.md  risk_engine.md  scenario_assumptions.md  scenario_customization.md  scenario_library.md  sensitivity_analysis.md  shared_resources.md  sla_modeling.md  team_capacity.md  (+1 more)
examples/: README.md
tests/: test_actors.py  test_ai_adoption.py  test_api_reference.py  test_arrivals.py  test_assumption_profile_behavior.py  test_assumptions.py  test_budget.py  test_calibration.py  test_capacity.py  test_capacity_planning.py  test_case_studies.py  test_cli.py  test_cli_phase7.py  test_cli_phase8.py  test_cli_phase9.py  test_collect_events.py  test_compliance.py  test_config_diff.py  test_configured_case_study.py  test_cross_workflow.py  test_customer_support_ticket_resolution.py  test_discrete_event.py  test_docs_consistency.py  test_duration.py  test_edge.py  test_event.py  test_example_json_samples.py  test_examples.py  test_executive_report.py  test_export.py  (+58 more)
(+136 files in other folders)
